# real-cugan-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
models/: pro-conservative-up2x.pth  pro-conservative-up3x.pth  pro-denoise3x-up2x.pth  pro-denoise3x-up3x.pth  pro-no-denoise-up2x.pth  pro-no-denoise-up3x.pth
real-cugan-cli/: Cargo.toml
real-cugan-core/: Cargo.toml
real-cugan-core/src/model/: mod.rs  se_block.rs  unet1.rs  unet2.rs  unet_conv.rs  utils.rs
src/: cli.rs  main.rs  setup.rs  utils.rs
src/model/: mod.rs
src/model/unet/: mod.rs  se_block.rs  unet1.rs  unet2.rs  unet_conv.rs
src/model/up_cunet/: mod.rs  up_cunet_2x.rs  up_cunet_3x.rs
