[package]
name = "real-cugan-rs"
version = "0.1.0"
edition = "2021"
authors = ["yurzhang <yurzhang.oi@gmail.com>"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }

[dependencies.candle-core]
git = "https://github.com/huggingface/candle.git"
version = "0.3.2"
features = ["cuda"]

[dependencies.candle-nn]
git = "https://github.com/huggingface/candle.git"
version = "0.3.2"

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["jpeg", "png", "webp", "webp-encoder"]
